cabal-version:      2.4
name:               sb2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Norman Ramsey
maintainer:         nr@cs.tufts.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common program-default-options
  ghc-options: -haddock -Werror -Wincomplete-patterns -Wall -Wno-name-shadowing -fno-ignore-asserts

executable bconv
    import: program-default-options
    main-is:        BConv.hs

    -- Modules included in this executable, other than Main.
    other-modules:  Test

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.2.0,
                      ghc >= 9.3,
                      ghc-boot >= 9.3
    hs-source-dirs:   .
    default-language: Haskell2010

    ghc-options:
